[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gui/hud/villain_indicators.gd" type="Script" id=1]
[ext_resource path="res://src/gui/hud/cooldown_indicator.tscn" type="PackedScene" id=2]

[node name="VillainIndicators" type="VBoxContainer"]
margin_left = 12.0
margin_right = 140.0
margin_bottom = 64.0
custom_constants/separation = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"sc_separation": 4
}

[node name="TremorCooldown" parent="." instance=ExtResource( 2 )]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
label = "Tremor"

[node name="BoulderCooldown" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 132.0
margin_right = 128.0
margin_bottom = 164.0
rect_min_size = Vector2( 128, 32 )
label = "Boulders"

[node name="OrcCooldown" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 132.0
margin_right = 128.0
margin_bottom = 164.0
rect_min_size = Vector2( 128, 32 )
label = "Orcs"

[node name="BaldrockCooldown" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 132.0
margin_right = 128.0
margin_bottom = 164.0
rect_min_size = Vector2( 128, 32 )
label = "Baldrocks"
